salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/Gold_Standard_Case__c.object-meta.xml
<CustomObject>
    <description>The Gold Standard Case (GSC) is basically a &quot;Pop Quiz&quot; for the doctors.

In the Azoth system, doctors review each other&apos;s orders. To make sure they aren&apos;t just lazily clicking &quot;Approve&quot; on everything without reading, the system randomly inserts these fake test cases into their review queue.</description>
    <label>Gold Standard Case</label>
    <nameField>
        <label>Gold Standard Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gold Standard Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>