salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Type__c</fullName>
    <label>Anchor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLOCK_TIME</fullName>
                <default>true</default>
                <label>Clock Time</label>
            </value>
            <value>
                <fullName>BIO_EVENT</fullName>
                <label>Bio Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>