salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Answer_Key__c.field-meta.xml
<CustomField>
    <fullName>Answer_Key__c</fullName>
    <label>Answer Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-1 (Reject)</fullName>
            </value>
            <value>
                <fullName>0 (Neutral)</fullName>
            </value>
            <value>
                <fullName>+1 (Approve)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>