salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Bio_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bio_Trigger__c</fullName>
    <label>Bio Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPON_WAKING</fullName>
                <default>true</default>
                <label>Upon Waking</label>
            </value>
            <value>
                <fullName>PRE_BED</fullName>
                <label>Pre-Bed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>