salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Clinical_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Rationale__c</fullName>
    <label>Clinical Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>