salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Day_Mask_JSON__c.field-meta.xml
<CustomField>
    <fullName>Day_Mask_JSON__c</fullName>
    <label>Day Mask JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>