salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Dose_mg__c.field-meta.xml
<CustomField>
    <fullName>Dose_mg__c</fullName>
    <label>Dose (mg)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>