salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gold Standard Cases</relationshipLabel>
    <relationshipName>Gold_Standard_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>