salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Schedule_Mode__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Mode__c</fullName>
    <label>Schedule Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIXED_DAYS</fullName>
                <default>true</default>
                <label>Fixed Days</label>
            </value>
            <value>
                <fullName>ROLLING_INTERVAL</fullName>
                <label>Rolling Interval</label>
            </value>
            <value>
                <fullName>TITRATION</fullName>
                <label>Titration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>