salesforce-org/org-backup/force-app/main/default/objects/Gold_Standard_Case__c/fields/Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Times_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>